--- a/soshine/templates/ABClistDiv.html
+++ b/soshine/templates/ABClistDiv.html
@@ -1,8 +1,8 @@
 <!--呼伦贝尔-->
 <div class="panel-group blocklist" id="panel-blocklist">
     <div class="blocklist-heading-Area">
-        <span id="Demo_Area_Hulbr" class="glyphicon glyphicon-eye-open" onclick="" style="cursor: pointer"></span>
-        呼伦贝尔农垦
+        <a href="{% url 'soshine:somap' 1 %}"><span id="Demo_Area_Hulbr" class="glyphicon glyphicon-eye-open" onclick="" style="cursor: pointer"></span></a>
+        <span id="Demo_Area_Hulbr_loc" style="cursor: pointer">呼伦贝尔农垦</span>
         <span class="glyphicon glyphicon-chevron-down" data-toggle="collapse" data-parent="#listBar"
               data-target="#panel-element-demo-Hulbr"  style="float: right;cursor: pointer"></span>
     </div>
@@ -46,8 +46,8 @@
 <!--重庆-->
 <div class="panel-group blocklist" id="panel-blocklist">
     <div class="blocklist-heading-Area">
-        <span id="Demo_Area_Chongqing" class="glyphicon glyphicon-eye-open" onclick="" style="cursor: pointer"></span>
-        重庆市林业防治
+         <a href="{% url 'soshine:somap' 2 %}"><span id="Demo_Area_Chongqing" class="glyphicon glyphicon-eye-open" onclick="" style="cursor: pointer"></span></a>
+        <span id="Demo_Area_Chongqing_loc" style="cursor: pointer">重庆市林业防治</span>
         <span class="glyphicon glyphicon-chevron-down" data-toggle="collapse" data-parent="#listBar"
               data-target="#panel-element-demo-Chongqing" style="float: right;cursor: pointer"></span>
     </div>
@@ -111,8 +111,8 @@
 <!--大连-->
 <div class="panel-group blocklist" id="panel-blocklist">
     <div class="blocklist-heading-Area">
-        <span id="Demo_Area_Dalian" class="glyphicon glyphicon-eye-open" onclick="" style="cursor: pointer"></span>
-        大连市林业防治
+         <a href="{% url 'soshine:somap' 3 %}"><span id="Demo_Area_Dalian" class="glyphicon glyphicon-eye-open" onclick="" style="cursor: pointer"></span></a>
+        <span id="Demo_Area_Dalian_loc" style="cursor: pointer">大连市林业防治</span>
         <span class="glyphicon glyphicon-chevron-down" data-toggle="collapse" data-parent="#listBar"
               data-target="#panel-element-demo-Dalian"  style="float: right;cursor: pointer"></span>
     </div>
@@ -234,8 +234,8 @@
 <!--青岛-->
 <div class="panel-group blocklist" id="panel-blocklist">
     <div class="blocklist-heading-Area">
-        <span id="Demo_Area_Qingdao" class="glyphicon glyphicon-eye-open" onclick="" style="cursor: pointer"></span>
-        青岛市林业防治
+        <a href="{% url 'soshine:somap' 4 %}"><span id="Demo_Area_Qingdao" class="glyphicon glyphicon-eye-open" onclick="" style="cursor: pointer"></span></a>
+        <span id="Demo_Area_Qingdao_loc" style="cursor: pointer">青岛市林业防治</span>
         <span class="glyphicon glyphicon-chevron-down" data-toggle="collapse" data-parent="#listBar"
               data-target="#panel-element-demo-Qingdao"  style="float: right;cursor: pointer"></span>
     </div>
@@ -306,8 +306,8 @@
 <!--博罗-->
 <div class="panel-group blocklist" id="panel-blocklist">
     <div class="blocklist-heading-Area">
-        <span id="Demo_Area_Boluo" class="glyphicon glyphicon-eye-open" onclick="" style="cursor: pointer"></span>
-        博罗县罗阳镇
+        <a href="{% url 'soshine:somap' 5 %}"><span id="Demo_Area_Boluo" class="glyphicon glyphicon-eye-open" onclick="" style="cursor: pointer"></span></a>
+        <span id="Demo_Area_Boluo_loc" style="cursor: pointer">博罗县罗阳镇</span>
         <span class="glyphicon glyphicon-chevron-down" data-toggle="collapse" data-parent="#listBar"
               data-target="#panel-element-demo-Boluo"  style="float: right;cursor: pointer"></span>
     </div>
@@ -410,8 +410,8 @@
 <!--赵光-->
 <div class="panel-group blocklist" id="panel-blocklist">
     <div class="blocklist-heading-Area">
-        <span id="Demo_Area_Zhaoguang" class="glyphicon glyphicon-eye-open" onclick="" style="cursor: pointer"></span>
-        赵光农垦
+        <a href="{% url 'soshine:somap' 6 %}"><span id="Demo_Area_Zhaoguang" class="glyphicon glyphicon-eye-open" onclick="" style="cursor: pointer"></span></a>
+        <span id="Demo_Area_Zhaoguang_loc" style="cursor: pointer">赵光农垦</span>
         <span class="glyphicon glyphicon-chevron-down" data-toggle="collapse" data-parent="#listBar"
               data-target="#panel-element-demo-Zhaoguang"  style="float: right;cursor: pointer"></span>
     </div>
@@ -474,8 +474,8 @@
 <!--新疆-->
 <div class="panel-group blocklist" id="panel-blocklist">
     <div class="blocklist-heading-Area">
-        <span id="Demo_Area_Xinjiang" class="glyphicon glyphicon-eye-open" onclick="" style="cursor: pointer"></span>
-        新疆农垦
+        <a href="{% url 'soshine:somap' 7 %}"><span id="Demo_Area_Xinjiang" class="glyphicon glyphicon-eye-open" onclick="" style="cursor: pointer"></span></a>
+        <span id="Demo_Area_Xinjiang_loc" style="cursor: pointer">新疆农垦</span>
         <span class="glyphicon glyphicon-chevron-down" data-toggle="collapse" data-parent="#listBar"
               data-target="#panel-element-demo-Xinjiang"  style="float: right;cursor: pointer"></span>
     </div>
@@ -507,8 +507,8 @@
 <!--张家口-->
 <div class="panel-group blocklist" id="panel-blocklist">
     <div class="blocklist-heading-Area">
-        <span id="Demo_Area_Zhangjk" class="glyphicon glyphicon-eye-open" onclick="" style="cursor: pointer"></span>
-        张家口市崇礼县
+        <a href="{% url 'soshine:somap' 8 %}"><span id="Demo_Area_Zhangjk" class="glyphicon glyphicon-eye-open" onclick="" style="cursor: pointer"></span></a>
+        <span id="Demo_Area_Zhangjk_loc" style="cursor: pointer">张家口市崇礼县</span>
         <span class="glyphicon glyphicon-chevron-down" data-toggle="collapse" data-parent="#listBar"
               data-target="#panel-element-demo-Zhangjk"  style="float: right;cursor: pointer"></span>
     </div>
