--- a/soshine/templates/LIstDiv.html
+++ b/soshine/templates/LIstDiv.html
@@ -3,8 +3,8 @@
         <div id="listBar-name">
             <h3 class="Bar-name">区域和地块列表</h3>
         </div>
-        {%  include 'InfoDiv.html' %}
-        {%  include 'ABClistDiv.html' %}
+        {% include 'OptionToolDiv.html' %}
+        {% include 'ABClistDiv.html' %}
 
     </div>
     <div id="listToggle" class="ToggleLogorightArrow"></div>
