--- a/account/static/css/sogis.css
+++ b/account/static/css/sogis.css
@@ -107,6 +107,7 @@ body,
     width: auto;
     height: auto;
 }
+
 .Bar-name{
     margin-top: 0;
     margin-bottom: 0;
@@ -280,4 +281,15 @@ td.comprtInfo-td{
     cursor: pointer;
     float: right;
 
+}
+
+
+.intro{
+    margin: 10px;
+    padding: 10px;
+    border: dotted 1px #f1f2f2;
+    width: auto;
+    height: auto;
+    color: #f1f2f2;
+    font-family: "Microsoft YaHei UI Light";
 }
