--- a/soshine/templates/ABClistDiv.html
+++ b/soshine/templates/ABClistDiv.html
@@ -1,7 +1,7 @@
 <!--呼伦贝尔-->
 <div class="panel-group blocklist" id="panel-blocklist">
     <div class="blocklist-heading-Area">
-        <a href="{% url 'soshine:somap' 1 %}"><span id="Demo_Area_Hulbr" class="glyphicon glyphicon-eye-open" onclick="" style="cursor: pointer"></span></a>
+        <a href="{% url 'soshine:somap' 1 %}"><span id="Demo_Area_Hulbr" class="glyphicon glyphicon-map-marker" onclick="" style="cursor: pointer"></span></a>
         <span id="Demo_Area_Hulbr_loc" style="cursor: pointer">呼伦贝尔农垦</span>
         <span class="glyphicon glyphicon-chevron-down" data-toggle="collapse" data-parent="#listBar"
               data-target="#panel-element-demo-Hulbr"  style="float: right;cursor: pointer"></span>
@@ -46,7 +46,7 @@
 <!--重庆-->
 <div class="panel-group blocklist" id="panel-blocklist">
     <div class="blocklist-heading-Area">
-         <a href="{% url 'soshine:somap' 2 %}"><span id="Demo_Area_Chongqing" class="glyphicon glyphicon-eye-open" onclick="" style="cursor: pointer"></span></a>
+         <a href="{% url 'soshine:somap' 2 %}"><span id="Demo_Area_Chongqing" class="glyphicon glyphicon-map-marker" onclick="" style="cursor: pointer"></span></a>
         <span id="Demo_Area_Chongqing_loc" style="cursor: pointer">重庆市林业防治</span>
         <span class="glyphicon glyphicon-chevron-down" data-toggle="collapse" data-parent="#listBar"
               data-target="#panel-element-demo-Chongqing" style="float: right;cursor: pointer"></span>
@@ -111,7 +111,7 @@
 <!--大连-->
 <div class="panel-group blocklist" id="panel-blocklist">
     <div class="blocklist-heading-Area">
-         <a href="{% url 'soshine:somap' 3 %}"><span id="Demo_Area_Dalian" class="glyphicon glyphicon-eye-open" onclick="" style="cursor: pointer"></span></a>
+         <a href="{% url 'soshine:somap' 3 %}"><span id="Demo_Area_Dalian" class="glyphicon glyphicon-map-marker" onclick="" style="cursor: pointer"></span></a>
         <span id="Demo_Area_Dalian_loc" style="cursor: pointer">大连市林业防治</span>
         <span class="glyphicon glyphicon-chevron-down" data-toggle="collapse" data-parent="#listBar"
               data-target="#panel-element-demo-Dalian"  style="float: right;cursor: pointer"></span>
@@ -234,7 +234,7 @@
 <!--青岛-->
 <div class="panel-group blocklist" id="panel-blocklist">
     <div class="blocklist-heading-Area">
-        <a href="{% url 'soshine:somap' 4 %}"><span id="Demo_Area_Qingdao" class="glyphicon glyphicon-eye-open" onclick="" style="cursor: pointer"></span></a>
+        <a href="{% url 'soshine:somap' 4 %}"><span id="Demo_Area_Qingdao" class="glyphicon glyphicon-map-marker" onclick="" style="cursor: pointer"></span></a>
         <span id="Demo_Area_Qingdao_loc" style="cursor: pointer">青岛市林业防治</span>
         <span class="glyphicon glyphicon-chevron-down" data-toggle="collapse" data-parent="#listBar"
               data-target="#panel-element-demo-Qingdao"  style="float: right;cursor: pointer"></span>
@@ -306,111 +306,60 @@
 <!--博罗-->
 <div class="panel-group blocklist" id="panel-blocklist">
     <div class="blocklist-heading-Area">
-        <a href="{% url 'soshine:somap' 5 %}"><span id="Demo_Area_Boluo" class="glyphicon glyphicon-eye-open" onclick="" style="cursor: pointer"></span></a>
-        <span id="Demo_Area_Boluo_loc" style="cursor: pointer">博罗县罗阳镇</span>
+        <a href="{% url 'soshine:somap' 5 %}"><span id="Demo_Area_Boluo" class="glyphicon glyphicon-fullscreen"  style="cursor: pointer"></span></a>
+        <span id="Demo_Area_Boluo_loc" style="cursor: pointer" onclick="change_intro('BL')">博罗县罗阳镇</span>
         <span class="glyphicon glyphicon-chevron-down" data-toggle="collapse" data-parent="#listBar"
               data-target="#panel-element-demo-Boluo"  style="float: right;cursor: pointer"></span>
     </div>
-    <!--地块列表|博罗县罗阳镇细1-9块-->
+    <!--地块列表|博罗县罗阳镇细1-3块-->
     <div id="panel-element-demo-Boluo" class="panel-collapse collapse">
         <div class="blocklist-heading">
-            <span id="Demo_Area_Boluo_A" class="glyphicon glyphicon-tree-conifer" onclick=""></span>
-            <span id="Demo_Area_Boluo_A_outline">博罗县罗阳镇地块A</span>
+            <a href="{% url 'soshine:somap' 50001 %}"><span id="Demo_Area_Boluo_A" class="glyphicon glyphicon-fullscreen" onclick=""></span></a>
+            <span id="Demo_Block_Boluo_A_outline" onclick="change_intro('BL_0001')">博罗县罗阳镇示例林班0001</span>
             <span class="glyphicon glyphicon-chevron-down" data-toggle="collapse" data-parent="#panel-blocklist"
                   data-target="#panel-element-demo-Boluo_A" style="float: right" ></span>
 
         </div>
         <div id="panel-element-demo-Boluo_A" class="panel-collapse collapse">
             <div id="Demo_Comprt_Boluo_A_01" class="Blockname panel-body ">
-                <span id="Demo_Comprt_Boluo_A_01_loc" class="glyphicon glyphicon-map-marker" style="cursor: pointer"></span>
-                区划01
+                <a href="{% url 'soshine:somap' 500010001 %}"><span id="Demo_Comprt_Boluo_A_01_info" class="glyphicon glyphicon-fullscreen" style="cursor: pointer"></span></a>
+                <span id="Demo_Comprt_Boluo_A_01_loc" style="cursor: pointer" onclick="change_intro('BL_0001_0001')">示例林班0001小班0001</span>
             </div>
             <div id="Demo_Comprt_Boluo_A_02" class="Blockname panel-body">
-                <span id="Demo_Comprt_Boluo_A_02_loc" class="glyphicon glyphicon-map-marker" style="cursor: pointer"></span>
-                区划02
+                <a href="{% url 'soshine:somap' 500010002 %}"><span id="Demo_Comprt_Boluo_A_02_info" class="glyphicon glyphicon-fullscreen" style="cursor: pointer"></span></a>
+                <span id="Demo_Comprt_Boluo_A_02_loc" style="cursor: pointer" onclick="change_intro('BL_0001_0002')">示例林班0001小班0002</span>
             </div>
             <div id="Demo_Comprt_Boluo_A_03" class="Blockname panel-body">
-                <span id="Demo_Comprt_Boluo_A_03_loc" class="glyphicon glyphicon-map-marker"  style="cursor: pointer"></span>
-                区划03
+                <a href="{% url 'soshine:somap' 500010003 %}"><span id="Demo_Comprt_Boluo_A_03_info" class="glyphicon glyphicon-fullscreen"  style="cursor: pointer"></span></a>
+                <span id="Demo_Comprt_Boluo_A_03_loc" style="cursor: pointer" onclick="change_intro('BL_0001_0003')">示例林班0001小班0003</span>
             </div>
-            <div id="Demo_Comprt_Boluo_A_04" class="Blockname panel-body">
-                <span id="Demo_Comprt_Boluo_A_04_loc" class="glyphicon glyphicon-map-marker"  style="cursor: pointer"></span>
-                区划04
-            </div>
-            <div id="Demo_Comprt_Boluo_A_06" class="Blockname panel-body">
-                <span id="Demo_Comprt_Boluo_A_05_loc" class="glyphicon glyphicon-map-marker"  style="cursor: pointer"></span>
-                区划05
-            </div>
-            <div id="Demo_Comprt_Boluo_A_06" class="Blockname panel-body">
-                <span id="Demo_Comprt_Boluo_A_06_loc" class="glyphicon glyphicon-map-marker"  style="cursor: pointer"></span>
-                区划06
-            </div>
-            <div id="Demo_Comprt_Boluo_A_07" class="Blockname panel-body">
-                <span id="Demo_Comprt_Boluo_A_07_loc" class="glyphicon glyphicon-map-marker"  style="cursor: pointer"></span>
-                区划07
-            </div>
-
         </div>
 
-        <!--地块列表|博罗县罗阳镇细2-3块-->
+        <!--地块列表|博罗县罗阳镇细2-2块-->
         <div class="blocklist-heading">
-            <span id="Demo_Area_Boluo_B" class="glyphicon glyphicon-tree-conifer" onclick=""></span>
-            <span id="Demo_Area_Boluo_B_outline">博罗县罗阳镇地块B</span>
+            <a href="{% url 'soshine:somap' 50002 %}"><span id="Demo_Area_Boluo_B" class="glyphicon glyphicon-fullscreen" onclick=""></span></a>
+            <span id="Demo_Block_Boluo_B_outline" onclick="change_intro('BL_0002')">博罗县罗阳镇示例林班0002</span>
             <span class="glyphicon glyphicon-chevron-down" data-toggle="collapse" data-parent="#panel-blocklist"
                   data-target="#panel-element-demo-Boluo_B" style="float: right" ></span>
         </div>
         <div id="panel-element-demo-Boluo_B" class="panel-collapse collapse">
             <div id="Demo_Comprt_Boluo_B_01" class="Blockname panel-body">
-                <span id="Demo_Comprt_Boluo_B_01_loc" class="glyphicon glyphicon-map-marker" style="cursor: pointer"></span>
-                区划51
+                <a href="{% url 'soshine:somap' 500020001 %}"><span id="Demo_Comprt_Boluo_B_01_info" class="glyphicon glyphicon-fullscreen" style="cursor: pointer"></span></a>
+                <span id="Demo_Comprt_Boluo_B_01_loc" style="cursor: pointer" onclick="change_intro('BL_0002_0001')">示例林班0002小班0001</span>
             </div>
             <div id="Demo_Comprt_Boluo_B_02" class="Blockname panel-body">
-                <span id="Demo_Comprt_Boluo_B_02_loc" class="glyphicon glyphicon-map-marker" style="cursor: pointer"></span>
-                区划52
+                <a href="{% url 'soshine:somap' 500020002 %}"><span id="Demo_Comprt_Boluo_B_02_info" class="glyphicon glyphicon-fullscreen" style="cursor: pointer"></span></a>
+                <span id="Demo_Comprt_Boluo_B_02_loc" style="cursor: pointer" onclick="change_intro('BL_0002_0002')">示例林班0002小班0002</span>
             </div>
-            <div id="Demo_Comprt_Boluo_B_03" class="Blockname panel-body">
-                <span id="Demo_Comprt_Boluo_B_03_loc" class="glyphicon glyphicon-map-marker" style="cursor: pointer"></span>
-                区划53
-            </div>
-            <div id="Demo_Comprt_Boluo_B_04" class="Blockname panel-body">
-                <span id="Demo_Comprt_Boluo_B_04_loc" class="glyphicon glyphicon-map-marker" style="cursor: pointer"></span>
-                区划54
-            </div>
-            <div id="Demo_Comprt_Boluo_B_05" class="Blockname panel-body">
-                <span id="Demo_Comprt_Boluo_B_05_loc" class="glyphicon glyphicon-map-marker" style="cursor: pointer"></span>
-                区划05|55
-            </div>
-
         </div>
 
-        <!--地块列表|博罗县罗阳镇细3-4块-->
-        <div class="blocklist-heading">
-            <span id="Demo_Area_Boluo_C" class="glyphicon glyphicon-tree-conifer" onclick=""></span>
-            <span id="Demo_Area_Boluo_C_outline">博罗县罗阳镇地块C</span>
-            <span class="glyphicon glyphicon-chevron-down" data-toggle="collapse" data-parent="#panel-blocklist"
-                  data-target="#panel-element-demo-Boluo_C" style="float: right"></span>
-        </div>
-        <div id="panel-element-demo-Boluo_C" class="panel-collapse collapse">
-            <div id="Demo_Comprt_Boluo_C_01" class="Blockname panel-body">
-                <span id="Demo_Comprt_Boluo_C_01_loc"  class="glyphicon glyphicon-map-marker" style="cursor: pointer"></span>
-                区划71
-            </div>
-            <div id="Demo_Comprt_Boluo_C_02" class="Blockname panel-body">
-                <span id="Demo_Comprt_Boluo_C_02_loc"  class="glyphicon glyphicon-map-marker" style="cursor: pointer"></span>
-                区划72
-            </div>
-            <div id="Demo_Comprt_Boluo_C_03" class="Blockname panel-body">
-                <span id="Demo_Comprt_Boluo_C_03_loc"  class="glyphicon glyphicon-map-marker" style="cursor: pointer"></span>
-                区划73
-            </div>
-        </div>
     </div>
 </div>
 
 <!--赵光-->
 <div class="panel-group blocklist" id="panel-blocklist">
     <div class="blocklist-heading-Area">
-        <a href="{% url 'soshine:somap' 6 %}"><span id="Demo_Area_Zhaoguang" class="glyphicon glyphicon-eye-open" onclick="" style="cursor: pointer"></span></a>
+        <a href="{% url 'soshine:somap' 6 %}"><span id="Demo_Area_Zhaoguang" class="glyphicon glyphicon-map-marker" onclick="" style="cursor: pointer"></span></a>
         <span id="Demo_Area_Zhaoguang_loc" style="cursor: pointer">赵光农垦</span>
         <span class="glyphicon glyphicon-chevron-down" data-toggle="collapse" data-parent="#listBar"
               data-target="#panel-element-demo-Zhaoguang"  style="float: right;cursor: pointer"></span>
@@ -474,7 +423,7 @@
 <!--新疆-->
 <div class="panel-group blocklist" id="panel-blocklist">
     <div class="blocklist-heading-Area">
-        <a href="{% url 'soshine:somap' 7 %}"><span id="Demo_Area_Xinjiang" class="glyphicon glyphicon-eye-open" onclick="" style="cursor: pointer"></span></a>
+        <a href="{% url 'soshine:somap' 7 %}"><span id="Demo_Area_Xinjiang" class="glyphicon glyphicon-map-marker" onclick="" style="cursor: pointer"></span></a>
         <span id="Demo_Area_Xinjiang_loc" style="cursor: pointer">新疆农垦</span>
         <span class="glyphicon glyphicon-chevron-down" data-toggle="collapse" data-parent="#listBar"
               data-target="#panel-element-demo-Xinjiang"  style="float: right;cursor: pointer"></span>
@@ -507,7 +456,7 @@
 <!--张家口-->
 <div class="panel-group blocklist" id="panel-blocklist">
     <div class="blocklist-heading-Area">
-        <a href="{% url 'soshine:somap' 8 %}"><span id="Demo_Area_Zhangjk" class="glyphicon glyphicon-eye-open" onclick="" style="cursor: pointer"></span></a>
+        <a href="{% url 'soshine:somap' 8 %}"><span id="Demo_Area_Zhangjk" class="glyphicon glyphicon-map-marker" onclick="" style="cursor: pointer"></span></a>
         <span id="Demo_Area_Zhangjk_loc" style="cursor: pointer">张家口市崇礼县</span>
         <span class="glyphicon glyphicon-chevron-down" data-toggle="collapse" data-parent="#listBar"
               data-target="#panel-element-demo-Zhangjk"  style="float: right;cursor: pointer"></span>
