--- a/soshine/templates/InfoDiv.html
+++ b/soshine/templates/InfoDiv.html
@@ -1,21 +1,15 @@
-<div id="comprtInfo">
-    <h3 class="comprtInfo-content" id="blocktitle">地区--地块--区划--</h3>
-    <div class="alert alert-info" id="comprtInfo-status">状态:---</div>
-    <table>
-    <tr>
-      <td class="comprtInfo-td" id="blockcordN">N:---.---- </td>
-      <td class="comprtInfo-td" id="blockcordS">S:---.---- </td>
-    </tr>
-    <tr>
-      <td class="comprtInfo-td" id="blockcordW">W:---.---- </td>
-      <td class="comprtInfo-td" id="blockcordE">E:---.---- </td>
-    </tr>
-    </table>
+<div id="optionDiv">
+    <div id="optionBar" >
+        <div id="optionBar-name">
+             <h3 class="Bar-name">数据信息与报告</h3>
+        </div>
+        {%  include 'AboutDiv.html' %}
+        {% include 'IntroDiv.html' %}
 
-    <h6 class="comprtInfo-content" id="blockm2">面积:-----㎡</h6>
-    <h6 class="comprtInfo-content" id="blockdate">日期:201-/--/--</h6>
-    <h6 class="comprtInfo-content" id="blockproduct">作物:------</h6>
-    <p class="comprtInfo-content" id="blockintro">
-        无
-    </p>
+
+
+    </div>
+    <div id="optionToggle" class="ToggleLogoleftArrow">
+
+    </div>
 </div>
